# Copyright 2023. The resback authors all rights reserved.

[package]
name = "resback"
version = "0.1.0"
edition = "2021"
authors = ["Qoo <akck0918@gmail.com>"]
description = "Respec.team's backend"
repository = "https://github.com/choijunhyuck/resback"
# We do not want to publish this
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
names = { version = "0.14.0", default-features = false }
oauth2 = "4.4.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["native-tls", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
