# Copyright 2023. The resback authors all rights reserved.

[package]
name = "resback"
version = "0.1.0"
edition = "2021"
authors = ["Qoo <akck0918@gmail.com>"]
description = "Respec.team's backend"
homepage = "https://respec.team"
repository = "https://github.com/choijunhyuck/resback"
# We do not want to publish this
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
aws-sdk-sesv2 = "0.29.0"
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
axum_typed_multipart = "0.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
names = { version = "0.14.0", default-features = false }
oauth2 = "4.4.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["native-tls", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
tempfile = "3.7.1"
thiserror = "1.0.47"
time = "0.3.25"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
